--- a/templates/page1.html
+++ b/templates/page1.html
@@ -1,8 +1,38 @@
 {% extends 'base.html' %}
 
 {% block content%}
-    <h1>Page 1</h1>
-    <nav>
-        <a href="{{ url_for('my_view.index')}}"><h2>Click here to return to Home</h2></a>
-    </nav>  
+<body>
+    <div>
+        <h4>Stages of development</h4><br>
+
+        <p>Like many inventions, the motorcycle evolved in gradual stages, without a single inventor who can lay sole claim to being the inventor. Early versions of the motorcycle were introduced by numerous inventors, mostly in Europe, in the 19th century. </p>
+        <div class="text-center">
+            <img src="/static/assets/riding-cycle-world.gif" class="img-fluid" alt="biker" />
+            </div>
+
+        <strong>Steam-Powered bicycles</strong>
+        <p>American Sylvester Howard Roper (1823-1896) invented a two-cylinder, steam-powered velocipede in 1867. A velocipede is an early form of a bicycle in which the pedals are attached to the front wheel. Roper's invention can be considered the first motorcycle if you allow your definition of a motorcycle to include a coal-fired steam engine. Roper, who also invented the steam-engine car, was killed in 1896 while riding his steam velocipede.  </p>
+        <p>Around the same time that Roper introduced his steam-powered velocipede, Frenchman Ernest Michaux attached a steam engine to a velocipede invented by his father, blacksmith Pierre Michaux. His version was fired by alcohol and twin belt drives that powered the front wheel. </p>
+        <p>A few years later, in 1881, an inventor named Lucius Copeland of Phoenix, Arizona developed a smaller steam boiler that could drive the rear wheel of a bicycle at the amazing speed of 12 mph. In 1887, Copeland formed a manufacturing company to produce the first so-called "Moto-Cycle," though it was actually a three-wheeled contraption. </p>
+        <strong>The First Gas-Engined Motorcycle</strong>
+<p>Over the next 10 years, dozens of different designs for self-propelled bicycles appeared, but it's widely acknowledged that the first to use a gasoline-powered internal combustion engine was the creation of German Gottlieb Daimler and his partner Wilhelm Maybach, who developed the Petroleum Reitwagon in 1885. This marked the moment in history when the dual development of a viable gas-powered engine and the modern bicycle collided. </p>
+<br>
+<p>The Reitwagen was not much to look at and had a feature that made it quite distinct from today's motorcycles: twin outrigger “training wheels” that stabilized the bike and allowed it to turn. But the basic concept of the Reitwagen—a motorized bike with a gasoline-powered internal combustion engine—was a revolutionary design that began blazing the trail for the modern motorcycle. </p><br>
+<p>However, it was four-wheeled vehicles, not two-wheeled, that held the Reitwagen designers’ real interest. Thus, after proving that gasoline engines could be used to power personal vehicles, the inventors abandoned the Reitwagen. However, by the turn of the 19th century, the motorized bicycle had captured the attention of enough inventors and industrialists that it would soon see widespread production. </p>
+<p>Gottlieb Daimler used a new engine invented by engineer Nicolaus Otto. Otto had invented the first "Four-Stroke Internal-Combustion Engine" in 1876, dubbing it the "Otto Cycle Engine" As soon as he completed his engine, Daimler (a former Otto employee) built it into a motorcycle. Oddly, Daimler's Reitwagon did not have a maneuverable front wheel, but instead relied on a pair of outrigger wheels, similar to training wheels, to keep the bike upright during turns. </p>
+<p>Daimler was a prodigious innovator and went on to experiment with gasoline motors for boats, and he also became a pioneer in the commercial car manufacturing arena. The company bearing his name eventually became Daimler Benz—the company that evolved in the corporation we now know as Mercedes-Benz. </p>
+<strong>Continued Development</strong>
+<p>From the late 1880s onward, dozens of additional companies sprang up to produce self-propelled "bicycles," first in Germany and Britain but quickly spreading to the U.S.</p>
+<p>In 1894, the German company, Hildebrand & Wolfmüller, became the first to establish a production line factory to manufacture the vehicles, which now for the first time were called "motorcycles." In the U.S., the first production motorcycle was built by the factory of Charles Metz, in Waltham, Massachusetts.</p>
+<strong>The Harley Davidson Motorcycle</strong>
+<p>No discussion of the history of motorcycles can end without some mention of the most famous U.S. manufacturer, Harley Davidson. </p>
+<p>Many of the 19th-century inventors who worked on early motorcycles often moved on to other inventions. Daimler and Roper, for example, both went on to develop automobiles and other vehicles. However, some inventors, including William Harley and the Davidsons brothers, continued to exclusively develop motorcycles. Among their business competitors were other new start-up companies, such as Excelsior, Indian, Pierce, Merkel, Schickel, and Thor.</p>
+<p>In 1903, William Harley and his friends Arthur and Walter Davidson launched the Harley-Davidson Motor Company. The bike had a quality engine, so it could prove itself in races, even though the company initially planned to manufacture and market it as a transport vehicle. Merchant C. H. Lange sold the first officially distributed Harley-Davidson in Chicago.</p>
+
+<p>From the earliest steam-powered bicycles to the choppers and sport bikes we all know today, the motorcycle has done a great deal of evolution over the years. Motorcycle culture has also seen a great deal of change, from the veterans groups that formed the first motorcycle clubs to the outlaw biker stereotypes of the 60s and 70s and the incredibly diverse landscape of motorcycling today.</p>
+
+
+</div>
+</body>
+
 {%endblock%}
