--- a/templates/page2.html
+++ b/templates/page2.html
@@ -3,16 +3,49 @@
 {% block content%}
 
 <body>
-    <h4>Development</h4>
+    <h4>Design</h4>
     <h4>The first Motorcycle Companies</h4>
 
+    <div class="text-center">
+        <img src="/static/assets/driving-with-speed-cycle-world.gif" class="img-fluid" alt="biker" />
+        </div>
     <div class="container">
     
-    <p>Now-forgotten firms, such as Hildebrand & Wolfmuller of Germany, were among the first production motorcycle companies. But, the names you probably recognize began popping up around the turn of the 20th century. The legendary UK manufacturer, Royal Enfield, began producing motorcycles in 1901, and Triumph and Indian started in 1902. <br>Then came the company that changed it all: Harley-Davidson. In 1903, William Harley, along with his partners, the brothers Arthur and Walter Davidson, launched Harley-Davidson out of a wooden shack in Milwaukee that served as their makeshift machine shop. After many failed prototypes and false starts, they hit upon a workable design in 1905 and began mass-producing early motorcycles that year.  </p>In 1909, Harley-Davidson released the first V-Twin motorcycle engine. This dual-cylinder engine was the game-changer that allowed Harley to break the market wide open. The company got another boost from World War I, in which the US government purchased tens of thousands of Harley-Davidson motorcycles for use on the front lines. The modern variants of the Harley V-Twin remain a cornerstone element of the H-D product lineup to this day. <br>Other motorcycle companies also continued to make important contributions in this era. The famous Triumph Model H, known as the 'Trusty Triumph', was one of the most popular motorcycles of WWI, with over 57,000 units manufactured. The Model H was also among the first mass-produced motorcycles that lacked pedals, which is why its commonly considered to be one of the first “true” motorcycles. </p>
-
-
-
-
+    <p>Now-forgotten firms, such as Hildebrand & Wolfmuller of Germany, were among the first production motorcycle companies. But, the names you probably recognize began popping up around the turn of the 20th century. The legendary UK manufacturer, Royal Enfield, began producing motorcycles in 1901, and Triumph and Indian started in 1902.</p> <br>
+    <p>Then came the company that changed it all: Harley-Davidson. In 1903, William Harley, along with his partners, the brothers Arthur and Walter Davidson, launched Harley-Davidson out of a wooden barn in Milwaukee that served as their makeshift machine shop.</p>
+    <p>After many failed prototypes and false starts, they hit upon a workable design in 1905 and began mass-producing early motorcycles that year.  </p>
+    <p>In 1909, Harley-Davidson released the first V-Twin motorcycle engine. This dual-cylinder engine was the game-changer that allowed Harley to break the market wide open. The company got another boost from World War I, in which the US government purchased tens of thousands of Harley-Davidson motorcycles for use on the front lines. The modern variants of the Harley V-Twin remain a cornerstone element of the H-D product lineup to this day.</p><br>
+    <p>Other motorcycle companies also continued to make important contributions in this era. The famous Triumph Model H, known as the 'Trusty Triumph', was one of the most popular motorcycles of WWI, with over 57,000 units manufactured. The Model H was also among the first mass-produced motorcycles that lacked pedals, which is why its commonly considered to be one of the first “true” motorcycles. </p>
+    <br>
+    <strong>Motorcycle Types</strong>
+    <p>Motorcycles come in many different styles, each offering design and performance characteristics to accommodate specific riding conditions. Let's take a look at the common categories of motorcycles.</p>
+    <br><strong>Street Bikes</strong>
+    <p>Street motorcycles come with all of the necessary equipment to be street-ready. They have lights, mirrors, a horn and a muffler. Their tires have a tread pattern that provides good traction on both wet and dry roads. Street motorcycles generally come in two forms -- touring motorcycles and cruisers. Touring motorcycles are specially designed for long-distance travel. Their most distinctive features are fairings, aerodynamic wind guards that wrap around the headlight to enhance styling and reduce drag. Touring bikes also come with other long-distance amenities, such as saddlebags and a comfortable passenger seat. Cruisers, which typically have no fairings, offer a more laid-back look. They are built with swept-back handlebars, low seats, and casual riding positions with forward-set footpegs.</p>
+    <strong>Sportbikes</strong>
+    <p>Sportbikes are designed to handle well at high speeds and on winding roads. They offer multi-cylinder engines to produce more power, aluminum alloy frames, stiff suspensions to improve handling, high-grip tires and powerful brakes. Instead of sitting up straight, sportbike riders lean forward over the gas tank to reduce wind resistance.</p>
+    <strong>Naked bikes</strong>
+    <p>Naked bikes offer the performance of sportbikes without the aesthetics. In most cases, they are stripped of any unnecessary bodywork. Because they're often the product of bike customizers who want a "road warrior" appearance, naked bikes are also called streetfighters, especially in Europe.</p>
+    <strong>Traditionals</strong>
+    <p>Also known as standards, traditionals look and handle like an archetypical model known as the Universal Japanese Motorcycle (UJM), built primarily in the 1970s. The UJM was an all-purpose, do-everything bike, and today's standards offer the same versatility and straightforward design.</p>
+    <strong>Off-road bikes</strong>
+    <p>Off-road motorcycles include both motocross bikes and dirt bikes -- machines designed to handle jumps, bumps and other obstacles found on closed racing courses or woodland trails. Off-road motorcycles have narrower, lighter frames, increased ground clearance and advanced suspension systems. They also have a kick-starter to reduce weight and tires with a knobby tread pattern for increased traction. Because off-road bikes usually don't come standard with lights, mirrors, a horn or a muffler, they aren't street-legal.</p>
+<strong>Dual-purpose</strong>
+<p>Dual-purpose bikes, also known as dual-sports, are street-legal motorcycles that offer some off-road capabilities. Like dirt bikes, dual-purpose machines are lightweight and durable. Like standards, they offer great versatility for newcomers and long-time riders alike. The dual-purpose motorcycle falls somewhere in between a dirt bike and a street motorcycle. For example, dual-purpose bikes feature specialized tires that work on both dirt and pavement.</p>
+<br>
+<strong>Motorcycle Future</strong>
+<p>Although the basic design of the motorcycle remains the same, motorcycle engineering continues to enjoy innovation and gradual evolution. Consider the two vehicles shown below. The B91 Wraith from Confederate Motor Company is a $50,000 motorcycle with a carbon-fiber frame and a molded carbon-fiber fuel container placed under the engine. The Dodge's Tomahawk is not even a motorcycle in the strictest definition. To handle the massive V10 Viper engine, Tomahawk designers had to add two more wheels. They also had to move the gas tank to the front fender to shield it from the engine's heat.</p>
+<div class="text-center">
+    <img src="/static/assets/Confederate Wraith B91 Black Bike.jpg" class="img-fluid" alt="biker" /><p>Confederate Wraith</p>
+    </div>
+    <div class="container">
+    <br>
+    <div class="text-center">
+        <img src="/static/assets/tomahawk.jpg" class="img-fluid" alt="biker" /><p>Tomahawk</p>
+        </div>
+    <div class="container">
+        <br>
+    <p>The Tomahawk is essentially a concept vehicle, but it demonstrates America's fascination with two-wheeled transportation and underscores why people ride motorcycles in the first place -- speed, power and the thrill of the ride.</p>
+    <p>Motorcycle accessories are becoming more high-tech as well. For example, BMW's K1200 LT Elite offers a built-in navigation system that dictates turn-by-turn directions through speakers in the helmet. The prototype Blue Eye Helmet features the world's first head-up display -- a 320- by 240-pixel color LCD positioned two inches from the eye.</p>
 
 
 
