--- a/templates/page5.html
+++ b/templates/page5.html
@@ -11,6 +11,11 @@
     <p>1867: Sylvester Howard Roper (American) was the creator and inventor of the steam-powered, two-cylinder velocipede. This was essentially an early form of a bicycle, but, more importantly, it was the first steam-powered one. While some may question whether Roper's design should have been considered a motorcycle, it had two wheels and a coal-fired steam engine, which was very advanced for its time.</p>
 <p>1881: Lucius Copeland (Arizona) created something similar, but years later. He not only made the steam boiler smaller, but it could ride at 12 mph, which was a great achievement for his time.</p><br>
 
+<div class="text-center">
+    
+    <img src="/static/assets/giphy.gif" class="img-fluid" alt="bike on road" />
+    </div>
+
 <p>1885: German partners Gottlieb Daimler and Wilhelm Mayback created the first gas-powered combustion engine. This was a staple in motorcycle history, as it was the first time anyone was able to combine a traditional bike with a gas-powered engine. They received help from an engineer by the name of Nicolaus Otto, who, in 1876, created the first-ever four-stroke internal combustion engine. Triumph Engineering was later founded in England, which would go on to become 'Triumph Motorcycles'.</p>
 <p>*Fun Fact*: Gottlieb Daimler would later try his hand in the car manufacturing industry, and the company he created would go by the name of 'Daimler Benz', which is currently Mercedes-Benz.</p>
 <p>1894: A German company called Hildebrand & Wolfmuller became the first to create a factory production line to create these vehicles. And to make the name of their product more clear, they dubbed the vehicles "motor-cycles".</p>
