--- a/templates/base.html
+++ b/templates/base.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{url_for('static', filename = 'main.css')}}">
-    <script type="text/javascript" src="{{url_for('static', filename ='app.js')}}"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{url_for('static', filename = 'main.css')}}">
+        <script type="text/javascript" src="{{url_for('static', filename ='app.js')}}"></script>
 
-    <title>Flask with bootstrap sass</title>
+        <link rel="stylesheet" href="custom.css">
+
+                <title>Motorcycle History</title>
 
 </head>
 
@@ -20,10 +22,11 @@
 
     <div class="container-fluid px-0">
         <!-- Content here -->
-        <nav class="navbar navbar-expand-sm navbar-light bg-light border-bottom">
+        <nav class="navbar navbar-expand-sm navbar-light bg-success border-bottom">
         <!-- Navbar content -->
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Welcome</a>
+            <a class="navbar-brand" href="#">
+                <img src="/static/assets/cruise-bike-icon.png" alt="" width="60" height="40"></a>
             <button
             class="navbar-toggler"
             type="button"
@@ -35,34 +38,35 @@
             >
             <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{ url_for('my_view.index')}}">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('my_view.page1')}}">Development</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('my_view.page2')}}">Design</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('my_view.page3')}}">Types</a>
-                </li>
-                <li class="nav-item">
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="{{ url_for('my_view.index')}}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('my_view.page1')}}">Development</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('my_view.page2')}}">Design</a>
+                    </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('my_view.page3')}}">How they work</a>
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('my_view.page4')}}">Culture</a>
-                </li>
-                <li class="nav-item">
+                    </li>
+                    <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('my_view.page5')}}">Timeline</a>
-                </li>
-            </ul>
+                    </li>
+                    </ul>
+
+                </div>
         
-            </div>
         </div>
         </nav>
-
+    </div>
         <!-- LIGHT SWITCH -->
-        <div class="d-flex">
+    <div class="d-flex">
         <div class="form-check form-switch ms-auto mt-3 me-3">
             <label class="form-check-label ms-3" for="lightSwitch">
             <svg
@@ -80,15 +84,7 @@
             </label>
             <input class="form-check-input" type="checkbox" id="lightSwitch" />
         </div>
-        </div>
-
-<!-- Back to top button 
-<button type="button" class="btn btn-danger btn-floating btn-lg" id="btn-back-to-top">
-    <i class="fas fa-chevron-up"></i>
-</button>
-
-<a id="back-to-top" href="#" class="btn btn-danger  btn-lg back_to_top" role="button"><i class="fas fa-chevron-up"></i></a>
--->
+    </div>
 
 <a href="#" id="toTopBtn" class="cd-top text-replace js-cd-top cd-top--is-visible cd-top--fade-out" data-abc="true"></a>
 
