--- a/templates/page3.html
+++ b/templates/page3.html
@@ -2,7 +2,119 @@
 
 {% block content%}
 <body>
-    <h1>Types of Motorcycle</h1>
+    <h4>How Motorcycles work</h4>
+<div class="container">
+
+<p>Motorcycles are motorized vehicles for transporting one or two riders. Generally, a motorcycle has only two wheels, but any vehicle with fewer than four wheels in contact with the ground can be classified as a motorcycle. Three-wheel variations of the motorcycle include the "hack" (motorcycle plus sidecar) and the "trike" (short for motortricycle).</p><br>
+
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/static/assets/triumph-bike.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/static/assets/sidecar.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/static/assets/trike-firebird.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+<p>The layout of the modern motorcycle was established by 1914 and has remained fundamentally unchanged ever since. The overall structure and function of a motorcycle is quite simple. It includes an engine, which converts the reciprocating motion of pistons into rotary motion, just like the engine in a car. A transmission system transmits this motion to the back wheel. As the back wheel turns, it propels the motorcycle forward. Steering is accomplished by turning the front wheel via the handlebars and by leaning the bike to one side or the other. Two hand levers enable the rider to operate the clutch and the front brake, while two foot pedals enable him to change gears and control the rear brake.</p>
+
+<div class="text-center">
+    <img src="/static/assets/tenor2.gif" class="img-fluid" alt="biker" />
+    </div>
+<p>Modern engines still work on pretty much the same principles as they did when a German engineer called Nicholas Otto built the first one in 1876.</p><br>
+<strong>So how does a motorcycle internal combustion engine work?</strong>
+<div class="text-center">
+        <img src="/static/assets/engine thinking.png" class="img-fluid" alt="engine pic" />
+    </div>
+    <br>
+    <strong>The basics of the engine</strong>
+<p>It all begins with a bang inside a small, confined space. The bang is not an explosion; it's a controlled burn of a mixture of petrol and air - the petrol got into the space by being squirted from an injector, and the air came from, er, the atmosphere. The bang/burn is also called combustion, as in 'internal combustion engine'. And the small, confined space is called a combustion chamber.</p>
+<strong>The really important bits-your basic engine</strong>
+<img src="/static/assets/engine_detail.png" class="img-fluid" alt="engine detail" />
+    </div>
+<p>In the roof of the combustion chamber is a spark plug, which sparks, or ignites the fuel/air mixture and starts combustion. That bit is called ignition.
+</p>
+<p>Gasses burning in small spaces expand, rapidly. The floor of the combustion chamber is actually the top of a piston, and luckily it slides down inside the walls of a cylinder - called a 'cylinder'. Say what you like about engineers, but they are logical.
+</p>
+<p>The piston is connected to a rod, called a 'connecting rod' (see?) - shortened to con rod, or just rod. The rod is connected to a large axle-type thing, called a crank. As combustion pushes the piston and con rod down, they turn the crank.</p>
+<p>Momentum in the crank (which is comparatively heavy) now swings the con rod and piston back up the cylinder again. This is useful because in doing so, it pushes all the burnt, exhausted gas out of the cylinder, through a pair of small valves that have just opened, and out into the, er, exhaust. A clever bit here - the timing of the valves opening and closing is controlled by a chain, running from the crank back up to a spindle (or camshaft) above the valves, and bashing them open precisely when needed.</p>
+<p>Phew, so far so good. But the job is half done. We need to get more petrol and air inside the combustion chamber.</p>
+<div class="text-center">
+    <h6>The complete four-stroke cycle.</h6>
+    <img src="/static/assets/4stroke.gif" class="img-fluid" alt="4stroke engine" />
+    </div>
+<p>We now have piston at the top of its stroke again. But the crank still has momentum and is still turning, and it starts to pull the piston back down the cylinder - which is an ideal opportunity to open another pair of valves (controlled by another camshaft) and let the low pressure of the descending piston draw a fresh pulse of fuel/air mixture into the cylinder, a bit like drawing blood in a syringe.</p>
+<p>Once again the piston reaches the bottom of its stroke, and the cylinder above it is full of swirling fuel/air mix. Still driven by crank momentum, the piston starts to rise again, for the second time, which compresses the mixture. When the piston reaches the top, the spark plug sparks again, igniting the mixture and pushing the piston back down the cylinder all over again.</p>
+<p>So thats a complete cycle of an internal combustion engine. If you have been counting, you will realise the piston actually went through two up strokes and two down strokes per cycle - thats why its called a four-stroke engine (there are many other types of engine - two-strokes, wankels, diesels etc - but almost all modern bike engines are four-strokes).</p>
+<p>So now all we have got is a piston flying up and down, and a spinning crank. How does that make a bike go forwards?</p>
+<p>As you will appreciate, the four-stroke cycle described above happens very, very quickly. Unbelievably quickly. When your bike is ticking over, the crank will be spinning at around 1200 revolutions per minute. Thats 600 sucks, 600 squeezes, 600 bangs and 600 blows every minute (because each one is half a crank revolution). And thats per cylinder.</p>
+<p>So the crank is spinning very quickly, but if you then just connected it with a chain to a back wheel, it would only have enough force to drive a motorbike very, very slowly, and it would be revving its nuts off to do it. If you imagine choosing first gear on a pushbike, then trying to pedal as you ride downhill; same thing.</p>
+<p>What we need to do is somehow select a higher gear on our pushbike instead. We need a system of gears to slow down the rate at which the crank is spinning, and which then - because of a phenomenon called mechanical advantage - actually increases the strength of the force (also called torque) to the point where we can drive a motorbike forward at a decent rate but with the engine revving more sensibly. We want to swap high crank speed and low torque for low crank speed and high torque.</p>
+<p>Ah, how about, a gearbox? So the crank has a cog, or gear, on the end of it, which turns a bunch of other gears of different sizes - and we can select which one we want, using a clever mechanism called a gear lever - before the drive appears, slower but much more forcefully, at an output gear - and from where we can hook a chain round it and drive the back wheel.
+</p>
+<p>Now your bike has a running engine, and is moving. Hooray!</p>
+<div class="text-center">
+    <img src="/static/assets/tenor3.gif" class="img-fluid" alt="biker" />
+    </div>
+<p>Of course, all the above only describes the process of one piston, rod and cylinder. You will know bikes can have one, two, three, four, not often five, but occasionally up to six cylinders. They can be arranged in weird and wonderful ways – next to each other (parallel twins, or inline threes, fours or sixes), in a V shape (V-twin or V-four), or facing each other (flat twin, flat four, even a flat six).</p>
+
+<div class="text-center">
+    <img src="/static/assets/Trophy motor.png" class="img-fluid" alt="triumph engine" />
+    </div>
+<p>Above is a drawing of a Triumph Trophy engine. You can see thre three pistons in a line, each on the end of a con rod and turning the crank beneath. You can also see the two inlet and exhaust camshafts across the top of the motor, actuating the valves. The big gear just behind the clutch basket is picking up drive from the crank and passes it into the gearbox - the cluster of gears. The drive output is the helical bevel gear at the bottom right. The Trophy has a shaft drive, and you can see its helical bevel gear picking up the gearbox output.</p><br>
+<p>Of course, all the above only describes the process of one piston, rod and cylinder. You will know bikes can have one, two, three, four, not often five, but occasionally up to six cylinders. They can be arranged in weird and wonderful ways - next to each other (parallel twins, or inline threes, fours or sixes), in a V shape (V-twin or V-four), or facing each other (flat twin, flat four, even a flat six).</p>
+<p>The number of cylinders and the way they are arranged plays a huge role in determining not just the character of your engine (how it vibrates, and the way it delivers its power when you open the throttle) but also in the handling - and size - of your bike. Because of this, some configurations of cylinders suit specific types of riding - so single cylinders work well in dirt bikes but not so well in touring bikes. V-fours make good sportsbike engines, but lousy off-road engines.
+</p>
+<p>Of course, this is only the most basic outlining of the way your bike engine works. Each engine has its own strengths and its own design quirks; it might be supercharged, or have variable valve technology, or a semi-automatic gearbox.</p>
+<p>The beautiful thing about a four-stroke engine is when you gaze at a drawing of one, or an animation on Youtube, and suddenly understand for the first time the magical interconnection of piston, rod, crank, camshaft and valves. Its a special moment, and one that can inspire a lifetime in engineering. Its the same Eureka moment that once inspired the mighty Soichiro Honda - and, without doubt, every other engine designer, great or small.</p>
+<br>
+<strong>Motorcycle Transmission</strong>
+<div class="text-center">
+  <img src="/static/assets/simple_trans.png" class="img-fluid" alt="biker" /><p>A simple transmission</p>
+  </div>
+<div class="container">
+  <br>
+
+<p>A motorcycle engine can create an enormous amount of power, which must be delivered to the wheels of the vehicle in a controllable way. The motorcycle transmission delivers power to the rear wheel through a series of structures that include the gearset, the clutch and the drive system.<p>
+<br>
+<strong>Gearset</strong>
+<p>A gearset is a set of gears that enable a rider to move from a complete stop to a cruising speed. Transmissions on motorcycles typically have four to six gears, although small bikes may have as few as two. The gears are engaged by shifting a lever, which moves shifting forks inside the transmission.</p><br>
+<strong>Clutch</strong>
+<p>The job of a clutch is to engage and disengage power from the engine crankshaft to the transmission. Without the clutch, the only way to stop the wheels from turning would be to turn off the engine -- an impractical solution in any kind of motorized vehicle. The clutch is a series of spring-loaded plates that, when pressed together, connect the transmission to the crankshaft. When a rider wants to shift gears, he uses the clutch to disconnect the transmission from the crankshaft. Once the new gear is selected, he uses the clutch to reestablish the connection.</p><br>
+<strong>Drive Systems</strong>
+<p>There are three basic ways to transmit engine power to the rear wheel of a motorcycle: chain, belt or shaft. Chain final-drive systems are by far the most common. In this system, a sprocket mounted to the output shaft (i.e., the shaft in the transmission) is connected to a sprocket attached to the rear wheel of the motorcycle by a metal chain. When the transmission turns the smaller front sprocket, power is transmitted along the chain to the larger rear sprocket, which then turns the rear wheel. This type of system must be lubricated and adjusted, and the chain stretches and the sprockets wear, requiring periodic replacements.</p>
+<div class="text-center">
+  <img src="/static/assets/drivesystem.jpg" class="img-fluid" alt="biker" /><p>Belt drive on a bike</p>
+  </div>
+<div class="container">
+  <br>
+<p>Belt drives are an alternative to chain drives. Early motorcycles often used leather belts, which could be tensioned to give traction using a spring-loaded pulley and hand lever. Leather belts often slipped, especially in wet weather, so they were abandoned for other materials and designs. By the 1980s, advances in materials made belt final-drive systems viable again. Today's belts are made of cogged rubber and operate much the same way as metal chains. Unlike metal chains, they don't require lubrication or cleaning solvents.</p>
+<p>Shaft final-drives are sometimes used. This system transmits power to the rear wheel via a drive shaft. Shaft drives are popular because they are convenient and don't require as much maintenance as chain-based systems. However, shaft drives are heavier and sometimes cause unwanted motion, called shaft jacking, in the rear of the motorcycle.</p><br>
+
+<strong>The Friction Drive</strong>
+<p>The friction drive is another transmission found in some motorcycles. A friction drive is a type of continuously variable transmission, or CVT, in which the variation in gear ratios comes about as a disc connected to the engine (the driving disc) rotates across the face of a second disc connected to the rear wheel (the driven disc). By varying the radius of the contact point between the two disc surfaces, different gears can be achieved. Continuously variable transmissions have a long history of use in motorized vehicles, with variable friction transmissions appearing in motorcycles in the early 1900s.</p><br>
+
+<p>The other components that make a motorcycle a motorcycle are part of the chassis.</p><br>
+
+
+
+
+
+
+
 
 
 
