--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    background-color:#9575CD;
+    /* background-color:#9575CD; */
 }
 
 .dark-mode {
